--- a/.gitignore
+++ b/.gitignore
@@ -10,3 +10,9 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+\.idea/libraries/Maven__junit_junit_4_11\.xml
+
+\.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3\.xml
+
+\.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_25\.xml
