--- a/.gitignore
+++ b/.gitignore
@@ -1,18 +1,25 @@
-*.class
+/target/
+!.mvn/wrapper/maven-wrapper.jar
 
-# Mobile Tools for Java (J2ME)
-.mtj.tmp/
+### STS ###
+.apt_generated
+.classpath
+.factorypath
+.project
+.settings
+.springBeans
+.sts4-cache
 
-# Package Files #
-*.jar
-*.war
-*.ear
+### IntelliJ IDEA ###
+.idea
+*.iws
+*.iml
+*.ipr
 
-# virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
-hs_err_pid*
-
-\.idea/libraries/Maven__junit_junit_4_11\.xml
-
-\.idea/libraries/Maven__org_hamcrest_hamcrest_core_1_3\.xml
-
-\.idea/libraries/Maven__org_slf4j_slf4j_api_1_7_25\.xml
+### NetBeans ###
+/nbproject/private/
+/build/
+/nbbuild/
+/dist/
+/nbdist/
+/.nb-gradle/
